--- a/css/withdrawfunds.css
+++ b/css/withdrawfunds.css
@@ -1,7 +1,4 @@
 /* screen - withdrawfunds */
-.container-center-vertical, .container-center-horizontal {
-  flex-direction: column;
-}
 
 .withdrawfunds {
   align-items: flex-end;
@@ -41,7 +38,6 @@
   text-align: left;
   white-space: nowrap;
   width: auto;
-  font-size: 17px;
 }
 .withdrawfunds .click-on-the-re-he-account-type-7VPqCY {
   background-color: transparent;
@@ -209,19 +205,18 @@
   text-align: left;
   white-space: nowrap;
   width: calc(100.00% - 133px);
-  font-size: 17px;
 }
 .withdrawfunds .everything-you-se-our-services-5sTxFf {
   background-color: transparent;
   height: auto;
   left: 9%;
   letter-spacing: 0.00px;
-  line-height: 42px;
+  line-height: 32px;
   position: absolute;
   text-align: left;
-  top: 476px;
+  top: 253px;
   width: 600px;
-  font-size: 40px !important;
+  font-size: 26px !important;
 }
 .withdrawfunds .flex-col-0xy0vn {
   align-items: flex-start;
@@ -277,18 +272,16 @@
   width: 456px;
 }
 .withdrawfunds .flex-col-fKmFVR {
-  align-items: flex-start;
+  align-self: flex-end;
   background-color: transparent;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
   flex-shrink: 1;
   height: auto;
-  justify-content: flex-start;
-  margin-bottom: 53.0px;
+  object-fit: cover;
   position: relative;
-  margin-left: 7%;
-  width: 50%;
+  margin-right: -27%;
+  margin-left: 9%;
+  width: 65%;
+  top: -250px;
 }
 
 .withdrawfunds .flex-col-xpmbvu {
@@ -349,18 +342,16 @@
   width: auto;
 }
 .withdrawfunds .flex-row-xpmbvu {
-  align-items: center;
+  align-items: flex-start;
   background-color: transparent;
   box-sizing: border-box;
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   flex-shrink: 1;
   height: auto;
   justify-content: flex-start;
   position: relative;
   width: 100%;
-  top: 100px;
-  flex-wrap: wrap;
 }
 .withdrawfunds .grey-back-5sTxFf {
   background-color: rgba(238,238,238,1.0);
@@ -407,13 +398,20 @@
   width: 440px;
 }
 .withdrawfunds .image-16-fKmFVR {
+  align-items: flex-start;
   background-color: transparent;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
   flex-shrink: 1;
   height: auto;
-  object-fit: cover;
+  justify-content: flex-start;
+  margin-bottom: 204.0px;
+  margin-left: 11%;
+  margin-right: 2%;
+  margin-top: 158px;
   position: relative;
-  margin-left: 4%;
-  width: 37%;
+  width: 38%;
 }
 .withdrawfunds .image-17-GyJUNH {
   background-color: transparent;
@@ -463,11 +461,11 @@
 .withdrawfunds .line-8-zHcrMx {
   background-color: transparent;
   flex-shrink: 1;
-  height: 1px;
+  height: 2px;
   margin-left: 4%;
   object-fit: cover;
   position: relative;
-  top: 32px;
+  top: 42px;
   width: 94%;
 }
 .withdrawfunds .missing-withdrawal-account-3xHcwy {
@@ -507,7 +505,6 @@
   top: calc(29.36% - 9px);
   white-space: nowrap;
   width: calc(100.00% - 55px);
-  font-size: 17px;
 }
 .withdrawfunds .select-the-account-type-vvCDiG {
   background-color: transparent;
@@ -570,17 +567,17 @@
   background-color: transparent;
   color: var(--nero);
   font-family: 'OswaldRegular-Regular', Helvetica;
-  font-size: 45px;
+  font-size: 44px;
   font-style: normal;
   font-weight: bold;
   height: auto;
   left: 9%;
   letter-spacing: 0.00px;
-  line-height: 45px;
+  line-height: 48px;
   position: absolute;
   text-align: left;
   text-shadow: 0px 3px 6px rgb(0 0 0 / 16%);
-  top: 183px;
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -652,7 +649,7 @@
   font-family: 'OswaldRegular-Regular', Helvetica;
   font-size: 30px;
   font-style: normal;
-  font-weight: bolder;
+  font-weight: bold;
   height: auto;
   margin-left: 7%;
   letter-spacing: 0.00px;
@@ -703,8 +700,16 @@
 }
 
 @media (min-width: 2000px) { 
+  .withdrawfunds .grey-back-5sTxFf {
+    height: 85%;
+  }
+  .withdrawfunds .swapslogoimage-transparent-5sTxFf {
+    margin-top: -22%;
+  }
   .withdrawfunds .everything-you-se-our-services-5sTxFf {
-    top: 433px;
+    top: 441px;
+    width: 538px;
+    font-size: 34px !important;
   }
   .withdrawfunds .swaps-fx-portal-user-guide-5sTxFf {
     font-size: 90px;
@@ -717,9 +722,20 @@
   .withdrawfunds .line-8-zHcrMx {
     top: 54px !important;
   }
-  .withdrawfunds .withdraw-funds-5sTxFf {
-    font-size: 71px !important;
+  .withdrawfunds .flex-col-fKmFVR {
+    top: -284px;
   }
+  .withdrawfunds .taking-out-fund-ounts-made-easy-Sxvg86 {
+    font-size: 49px;
+  }
+  .withdrawfunds .group-14-Sxvg86 {
+    height: 228px;
+  }
+  .withdrawfunds .select-the-desi-he-account-type-p8MuxV, 
+  .segoeui-regular-normal-nero-20px {
+    font-size: 25px !important;
+  }
+
 }
 @media (max-width: 2000px) { 
   .withdrawfunds .swaps-fx-portal-user-guide-5sTxFf {
@@ -729,48 +745,34 @@
   }
   .withdrawfunds .everything-you-se-our-services-5sTxFf {
     top: 345px;
+    width: 581px;
+    font-size: 31px !important;
+  }
+  .withdrawfunds .grey-back-5sTxFf {
+    height: 83%;
+  }
+  .withdrawfunds .swapslogoimage-transparent-5sTxFf {
+    margin-top: -18%;
+  }
+  .withdrawfunds .select-the-desi-he-account-type-p8MuxV,
+  .segoeui-regular-normal-nero-20px  {
+    font-size: 19px !important;
   }
 
 }
 
 @media (min-width: 1500px) {
+  .withdrawfunds .withdraw-funds-5sTxFf {
+    font-size: 66px !important;
+  }
   .withdrawfunds .line-8-zHcrMx {
     top: 44px;
-  }
-  .withdrawfunds .withdraw-funds-5sTxFf {
-    font-size: 52px;
-
+    top: 57px;
   }
   .withdrawfunds .taking-out-fund-ounts-made-easy-Sxvg86 {
-    font-size: 48px;
+    font-size: 42px;
   }
 
-  .withdrawfunds .select-the-desi-he-account-type-p8MuxV{
-    top: -8px;
-    white-space: wrap;
-    font-size: 29px;
-  }
-  .withdrawfunds .ellipse-29-p8MuxV {
-    top: 83px;
-  }
-  .withdrawfunds .select-the-acco-nt-type-channel-p8MuxV { 
-  top: 67px;
-  font-size: 30px;
-  }
-  .withdrawfunds .ellipse-30-p8MuxV {
-    top: 130px;
-  }
-  .withdrawfunds .enter-the-desired-amount-p8MuxV {
-    font-size: 30px;
-    top: 113px;
-  }
-  .withdrawfunds .ellipse-31-p8MuxV {
-    top: 176px;
-  }
-  .withdrawfunds .click-initiate-withdrawal-p8MuxV {
-    font-size: 30px;
-    top: 159px;
-  }
 }
 @media (max-width: 1500px) {
   .withdrawfunds .everything-you-se-our-services-5sTxFf {
@@ -779,13 +781,22 @@
     width: 500px;
 }
 .withdrawfunds .swaps-fx-portal-user-guide-5sTxFf {
-  font-size: 60px;
+  font-size: 51px;
   line-height: 60px;
   top: 190px;
 }
+.withdrawfunds .withdraw-funds-5sTxFf {
+  font-size: 39px;
 }
+.withdrawfunds .select-the-desi-he-account-type-p8MuxV,
+.segoeui-regular-normal-nero-20px  {
+  font-size: 16px !important;
+}
+}
+
+
 @media (max-width: 1200px) { 
-  .withdrawfunds .swapslogoimage-transparent-y1HRxC {
+  .withdrawfunds .swapslogoimage-transparent-5sTxFf {
     margin-left: 17%;
     width: 123%;
     margin-top: -16%;
@@ -808,110 +819,209 @@
     width: 500px;
     line-height: 32px;
   }
+  .withdrawfunds .flex-col-fKmFVR {
+    top: -187px;
+  }
+  .withdrawfunds .taking-out-fund-ounts-made-easy-Sxvg86 {
+    font-size: 25px;
+  }
+  .withdrawfunds .group-14-Sxvg86 {
+    height: 124px;
+    top: -32px;
+  }
+  .withdrawfunds .select-the-desi-he-account-type-p8MuxV,
+   .segoeui-regular-normal-nero-20px {
+     font-size: 12px !important;
+   }
 }
 @media (max-width: 900px) { 
   .withdrawfunds .swapslogoimage-transparent-5sTxFf {
     margin-left: 6%;
     width: 138%;
-    margin-top: -12%;
+    margin-top: -23%;
   }
   .withdrawfunds .grey-back-5sTxFf {
-    height: 80%;
+    height: 75%;
   }
-  .withdrawfunds .swapslogoimage-transparent-5sTxFf {
-    margin-left: 12%;
-    width: 130%;
-    margin-top: -16%;
-  }
+
   .withdrawfunds .swaps-fx-user-guide-5sTxFf {
     font-size: 20px;
     top: 57px;
 }
-.withdrawfunds .line-1-5sTxFf {
-  top: 85px;
-}
 .withdrawfunds .swaps-fx-portal-user-guide-5sTxFf {
-  font-size: 30px;
+  font-size: 26px;
   line-height: 30px;
-  top: 155px;
+  top: 125px;
+  left: 11%;
+  }
+  .withdrawfunds .withdraw-funds-5sTxFf {
+    font-size: 28px;
   }
   .withdrawfunds .everything-you-se-our-services-5sTxFf {
-    top: 218px;
-    font-size: 21px !important;
-    width: 287px;
-    line-height: 28px;
+    top: 187px;
+    font-size: 16px !important;
+    width: 283px;
+    line-height: 19px;
+    left: 11%;
 }
+.withdrawfunds .line-8-zHcrMx {
+  top: 37px;
+}
+.withdrawfunds .flex-col-fKmFVR {
+  margin-right: auto;
+  margin-left: auto;
+  width: 72%;
+  top: 150px;
+}
+.withdrawfunds .image-16-fKmFVR {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 196px;
+  width: 70%;
+}
+.withdrawfunds .taking-out-fund-ounts-made-easy-Sxvg86 {
+  font-size: 27px;
+}
+.withdrawfunds .group-14-Sxvg86 {
+  height: 120px;
+  top: -27px;
+}
+.withdrawfunds .select-the-desi-he-account-type-p8MuxV,
+ .segoeui-regular-normal-nero-20px {
+   font-size: 14px !important;
+ }
 }
 @media (max-width: 600px) { 
 
-  .withdrawfunds .swapslogoimage-transparent-y1HRxC {
+  .withdrawfunds .swapslogoimage-transparent-5sTxFf {
     margin-left: 6%;
     width: 140%;
+    margin-top: -11%;
   }
   .withdrawfunds .grey-back-5sTxFf {
     top: 23px;
-    height: 119%;
+    height: 85%;
   }
   .withdrawfunds .black-top-rectangle-5sTxFf {
     height: 14px;
   }
   .withdrawfunds .yellow-thin-rectangle-5sTxFf {
-    height: 4px;
+    height: 5px;
     top: 15px;
   }
+  .withdrawfunds .swaps-fx-user-guide-5sTxFf {
+    font-size: 15px;
+    top: 48px;
+  }
+  .withdrawfunds .line-1-5sTxFf {
+    top: 70px;
+  }
   .withdrawfunds .everything-you-se-our-services-5sTxFf {
-    top: 179px;
-    font-size: 18px !important;
-    width: 240px;
+    top: 169px;
+    font-size: 12px !important;
+    width: 187px;
     line-height: 18px;
   }
   .withdrawfunds .swaps-fx-portal-user-guide-5sTxFf {
-    font-size: 27px;
-    line-height: 30px;
+    font-size: 20px;
+    line-height: 22px;
     top: 125px;
   }
   .withdrawfunds .withdraw-funds-5sTxFf {
-    font-size: 19px;
-    margin-top: 100px;
+    font-size: 17px;
+    margin-top: 0px;
   }
   .withdrawfunds .line-8-zHcrMx {
-    margin-top: 95px;
+    margin-top: -11px;
   }
 }
 
 @media (max-width: 400px) {
+  .withdrawfunds .grey-back-5sTxFf {
+    top: 23px;
+    height: 103%;
+  }
+  .withdrawfunds .swapslogoimage-transparent-5sTxFf {
+    margin-top: -6%;
+    width: 1;
+  }
   .withdrawfunds .swaps-fx-user-guide-5sTxFf  {
-    font-size: 15px;
+    font-size: 12px;
     top: 48px;
   }
   .withdrawfunds .line-1-5sTxFf{
-    top: 68px;
+    top: 69px;
   }
   .withdrawfunds .everything-you-se-our-services-5sTxFf {
-    top: 157px;
-    font-size: 14px !important;
-    width: 214px;
+    top: 177px;
+    font-size: 11px !important;
+    width: 153px;
     line-height: 14px
   }
   .withdrawfunds .swaps-fx-portal-user-guide-5sTxFf {
-    font-size: 22px;
+    font-size: 17px;
     line-height: 21px;
-    top: 116px;
+    top: 134px;
   }
   .withdrawfunds .withdraw-funds-5sTxFf {
-    margin-top: 76px;
+    margin-top: 50px;
   }
   .withdrawfunds .line-8-zHcrMx {
-    margin-top: 71px;
+    margin-top: 40px;
+  }
+  .withdrawfunds .select-the-desi-he-account-type-p8MuxV, 
+  .segoeui-regular-normal-nero-20px {
+    font-size: 8px;
+  }
+  .withdrawfunds {
+    height: 1700px;
+  }
+  .withdrawfunds .ellip {
+    height: 4px;
+    width: 4px;
+  }
+  .withdrawfunds .taking-out-fund-ounts-made-easy-Sxvg86 {
+    font-size: 18px;
+  }
+  .withdrawfunds .group-14-Sxvg86 {
+    height: 86px;
+    top: -43px;
+  }
+  .withdrawfunds .image-16-fKmFVR {
+    margin-top: 148px;
+    width: 70%;
   }
 
 }
 
 @media (max-width: 300px) {
   .withdrawfunds .grey-back-5sTxFf {
-    height: 141%;
+    height: 123%;
   }
   .withdrawfunds .swapslogoimage-transparent-5sTxFf {
     margin-top: -7%;
+  }
+  .withdrawfunds .swaps-fx-user-guide-5sTxFf {
+    font-size: 10px;
+    top: 42px;
+  }
+  .withdrawfunds .line-1-5sTxFf {
+    top: 59px;
+  }
+  .withdrawfunds .swaps-fx-portal-user-guide-5sTxFf {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .withdrawfunds .everything-you-se-our-services-5sTxFf {
+    top: 133px;
+    font-size: 9px !important;
+    width: 159px;
+  }
+  .withdrawfunds .withdraw-funds-5sTxFf {
+    font-size: 14px;
+    margin-top: 63px;
+  }
+  .withdrawfunds .line-8-zHcrMx {
+    margin-top: 52px;
   }
 }
