--- a/css/withdrawfunds.css
+++ b/css/withdrawfunds.css
@@ -1207,6 +1207,9 @@
   .withdrawfunds .confirm-action-omplete-removal-7VPqCY {
     top: 14px;
   }
+  .withdrawfunds .flex-row-C61RwL {
+    top: -159px;
+  }
 
 
 }
