--- a/css/withdrawfunds.css
+++ b/css/withdrawfunds.css
@@ -1208,8 +1208,8 @@
     top: 14px;
   }
   .withdrawfunds .flex-row-C61RwL {
-    top: -159px;
-    margin-top: -71px;
+    top: -98px !important;
+    margin-top: -71px !important;
   }
 
 
