--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -480,6 +480,44 @@ to{opacity: 1;}
   .sign-up .line-2-C61RwL {
     top: 54px !important;
   }
+  .sign-up .image-1-C61RwL {
+    top: -20% !important;
+  }
+  .sign-up .group-30-C61RwL {
+    margin-left: 5% !important;
+    width: 41% !important;
+  }
+  .sign-up .sign-up-xxkKyh {
+    font-size: 49px !important;
+    margin-left: -1% !important;
+  }
+  .sign-up .you-can-easily-following-steps-xxkKyh {
+    font-size: 26px !important;
+  }
+  .sign-up .x1-click-on-the-sign-up-button-xxkKyh {
+    font-size: 24px !important;
+    top: -108px !important;
+    line-height: 37px !important;
+  }
+  .sign-up .line-3-C61RwL {
+    height: 42%;
+    top: 0%;
+  }
+  .sign-up .line-4-C61RwL {
+    width: 80%;
+  }
+  .sign-up .polygon-1-C61RwL {
+    bottom: calc(54.95%);
+  }
+  .sign-up .account-validation-C61RwL {
+    font-size: 46px;
+    top: 144px;
+  }
+  .sign-up .x1-a-one-time-to-ocess-completed-C61RwL {
+    font-size: 31px !important;
+    line-height: 52px !important;
+    top: 181px !important;
+  }
 }
 
 
@@ -515,13 +553,48 @@ to{opacity: 1;}
   }
   
   .sign-up .image-1-C61RwL {
-    top: -100px;
+    top: -126px;
   }
   .sign-up .sign-up-xxkKyh {
-    font-size: 41px;
-    margin-left: -13%;
+    font-size: 48px;
+    margin-left: -2%;
+    top: -224px;
   }
+  .sign-up .group-30-C61RwL {
+    margin-left: 3%;
+    width: 44%;
+  }
+  .sign-up .you-can-easily-following-steps-xxkKyh {
+    font-size: 25px;
 
+  }
+  .sign-up .x1-click-on-the-sign-up-button-xxkKyh {
+    font-size: 20px;
+    top: -114px;
+    line-height: 34px;
+  }
+  .sign-up .line-3-C61RwL {
+    height: 27%;
+    top: -15%;
+  }
+  .sign-up .polygon-1-C61RwL {
+    right: calc(-34.67%);
+  }
+  .sign-up .line-7-C61RwL {
+    left: -15%;
+    width: 65%;
+  }
+  .sign-up .account-validation-C61RwL {
+    font-size: 41px;
+    left: -36px;
+    top: 119px;
+  }
+  .sign-up .x1-a-one-time-to-ocess-completed-C61RwL {
+    font-size: 25px;
+    line-height: 49px;
+    top: 174px;
+    left: -53px;
+  }
 }
 
 
@@ -540,6 +613,16 @@ to{opacity: 1;}
   }
   .sign-up .getting-started-C61RwL {
     font-size: 39px;
+  }
+  .sign-up .group-30-C61RwL {
+    margin-left: 5%;
+    width: 41%;
+  }
+  .sign-up .you-can-easily-following-steps-xxkKyh {
+    font-size: 17px;
+  }
+  .sign-up .x1-click-on-the-sign-up-button-xxkKyh {
+    font-size: 15px;
   }
 }
 
@@ -874,6 +957,9 @@ to{opacity: 1;}
   .sign-up .account {
     margin-bottom: -250px;
   }
+  .sign-up .proceed-to-sign-in-VyzZeT {
+    font-size: 27px;
+  }
 }
 
 
@@ -971,6 +1057,12 @@ to{opacity: 1;}
   .sign-up .polygon-2-C61RwL {
     top: -462%;
     bottom: calc(54.95%);
+  }
+  .sign-up .group-1-C61RwL {
+    top: 900px;
+  }
+  .sign-up {
+    height: 1230px;
   }
 }
 
